--- a/lineupscode.html
+++ b/lineupscode.html
@@ -5,199 +5,157 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sand Stone Mini Oyun</title>
 <style>
-*{box-sizing:border-box;margin:0;padding:0;}
-body{font-family:Arial,sans-serif;background:#fff;color:#000;display:flex;flex-direction:column;min-height:100vh;}
-header{display:flex;justify-content:space-between;align-items:center;background:#222;color:#fff;padding:10px 20px;flex-shrink:0;}
-header h1{font-size:1.3rem;cursor:pointer;}
-header button{font-size:1rem;cursor:pointer;padding:5px 10px;}
-main{flex:1;display:flex;flex-direction:column;justify-content:center;align-items:center;padding:20px;}
-#miniMapContainer{position:relative;display:inline-block;}
-#miniMap{width:90%;max-width:800px;display:block;border:2px solid #000;border-radius:10px;cursor:pointer;}
-#miniAdImg{margin:20px;cursor:pointer;max-width:300px;}
-#settingsPopup{display:none;position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:#fff;border:2px solid #000;padding:20px;z-index:50;}
-#settingsPopup button,#settingsPopup select{margin:5px;cursor:pointer;}
-.tutorial{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);background:#f2f2f2;border:2px solid #000;padding:20px;z-index:60;display:none;}
-.tutorial button{margin:5px;}
-#videoModal{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);justify-content:center;align-items:center;z-index:100;}
-#videoModal video{width:100%;max-width:800px;}
-#videoModal button{position:absolute;top:10px;right:10px;font-size:1.2rem;cursor:pointer;}
-@media(max-width:768px){header h1{font-size:1rem;} header button{font-size:0.9rem;}}
-@media(max-width:480px){header{flex-direction:column;align-items:flex-start;}header h1{margin-bottom:5px;}}
+* { box-sizing:border-box; margin:0; padding:0; }
+body { font-family:Arial, sans-serif; background:#fff; color:#000; display:flex; flex-direction:column; min-height:100vh; }
+
+/* Header */
+header { display:flex; justify-content:space-between; align-items:center; background:#222; color:#fff; padding:10px 20px; flex-shrink:0; }
+header h1 { font-size:1.3rem; cursor:pointer; }
+header button { font-size:1rem; cursor:pointer; padding:5px 10px; }
+
+/* Main */
+main { flex:1; display:flex; flex-direction:column; justify-content:center; align-items:center; padding:20px; }
+
+/* Mini map container ve fotoğraf */
+#miniMapContainer { position:relative; display:inline-block; }
+#miniMap { width:90%; max-width:800px; display:block; border:2px solid #000; border-radius:10px; cursor:pointer; }
+
+/* Mini map üstü reklam */
+#miniAd { position:absolute; top:5px; left:50%; transform:translateX(-50%); background:rgba(255,255,0,0.8); padding:5px 10px; border:1px solid #000; cursor:pointer; font-weight:bold; }
+
+/* Ayarlar Popup */
+#settingsPopup { display:none; position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#fff; border:2px solid #000; padding:20px; z-index:50; }
+#settingsPopup button { margin:5px; cursor:pointer; }
+
+/* Tutorial */
+.tutorial { position:fixed; top:50%; left:50%; transform:translate(-50%,-50%); background:#f2f2f2; border:2px solid #000; padding:20px; z-index:60; display:none; }
+.tutorial button { margin:5px; }
+
+/* Responsive */
+@media(max-width:768px){ header h1{font-size:1rem;} header button{font-size:0.9rem;} }
+@media(max-width:480px){ header{flex-direction:column;align-items:flex-start;} header h1{margin-bottom:5px;} }
 </style>
 </head>
 <body>
 
 <header>
-<h1 id="sandStoneTitle">Sand Stone</h1>
-<button id="settingsBtn">☰ Ayarlar</button>
+    <h1 id="sandStoneTitle">Sand Stone</h1>
+    <button id="settingsBtn">☰ Ayarlar</button>
 </header>
 
 <main>
-<div id="miniMapContainer">
-    <img id="miniMap" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGnQmTu2-0yu6rQSVa_4l7w18-6h8tYl3hQRy7deax1w&s=10">
-</div>
-<img id="miniAdImg" src="https://via.placeholder.com/300x100?text=REKLAM" alt="Reklam">
+    <div id="miniMapContainer">
+        <img id="miniMap" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSGnQmTu2-0yu6rQSVa_4l7w18-6h8tYl3hQRy7deax1w&s=10">
+        <div id="miniAd">REKLAM</div>
+    </div>
 </main>
 
+<!-- Tutorial -->
 <div class="tutorial" id="tutorial">
-<h2 id="tutorialTitle">Nasıl Oynanır?</h2>
-<p id="tutorialText1">Mini map üstteki fotoğrafa tıklayınca video açılacak.</p>
-<p id="tutorialText2">Sol üstten ayarlara girip tema ve dili değiştirebilirsiniz.</p>
-<button id="closeTutorial">Tamam</button>
+    <h2>Nasıl Oynanır?</h2>
+    <p>Mini map üzerinde kırmızı noktalar veya fotoğrafın kendisine tıklayın.</p>
+    <p>Boş alana tıklayınca ana reklam linki açılır.</p>
+    <p>Sol üstten ayarlara girip tema değiştirebilirsiniz.</p>
+    <button id="closeTutorial">Tamam</button>
 </div>
 
+<!-- Ayarlar Popup -->
 <div id="settingsPopup">
-<h2 id="settingsTitle">Ayarlar & Haritalar</h2>
-<p id="themeText">Tema Seçimi:</p>
-<button id="themeLight">🌞 Beyaz Tema</button>
-<button id="themeDark">🌙 Siyah Tema</button>
-<br><br>
-<p id="langText">Dil Seçimi:</p>
-<select id="languageSelect">
-<option value="tr">Türkçe</option>
-<option value="en">English</option>
-<option value="ru">Русский</option>
-</select>
-<br><br>
-<p id="mapsText">Haritalar:</p>
-<button class="mapBtn">Dune</button>
-<button class="mapBtn">Rust</button>
-<button class="mapBtn">Zone 7</button>
-<button class="mapBtn">Hanami</button>
-<button class="mapBtn">Province</button>
-<button class="mapBtn">Breeze</button>
-<br><br>
-<button id="reportError">Hata Bildir</button>
-<br><br>
-<button id="closeSettings">Kapat</button>
-</div>
-
-<!-- Video Modal -->
-<div id="videoModal">
-<button id="closeVideo">X</button>
-<video id="modalVideo" controls>
-<source src="" type="video/mp4">
-Tarayıcınız video etiketini desteklemiyor.
-</video>
+    <h2>Ayarlar & Haritalar</h2>
+    <p>Tema Seçimi:</p>
+    <button id="themeLight">🌞 Beyaz Tema</button>
+    <button id="themeDark">🌙 Siyah Tema</button>
+    <br><br>
+    <p>Haritalar:</p>
+    <button class="mapBtn">Dune</button>
+    <button class="mapBtn">Rust</button>
+    <button class="mapBtn">Zone 7</button>
+    <button class="mapBtn">Hanami</button>
+    <button class="mapBtn">Province</button>
+    <button class="mapBtn">Breeze</button>
+    <br><br>
+    <button id="reportError">Hata Bildir</button>
+    <br><br>
+    <button id="closeSettings">Kapat</button>
 </div>
 
 <script>
 // Tutorial
-const tutorial=document.getElementById('tutorial');
+const tutorial = document.getElementById('tutorial');
+const closeTutorial = document.getElementById('closeTutorial');
 tutorial.style.display='block';
-document.getElementById('closeTutorial').addEventListener('click',()=>tutorial.style.display='none');
+closeTutorial.addEventListener('click',()=>tutorial.style.display='none');
 
-// Mini map ve reklam
-const miniMap=document.getElementById('miniMap');
-const miniAdImg=document.getElementById('miniAdImg');
+// Mini map ve reklam tıklamaları
+const miniMap = document.getElementById('miniMap');
+const miniAd = document.getElementById('miniAd');
 
-// Video modal
-const videoModal=document.getElementById('videoModal');
-const modalVideo=document.getElementById('modalVideo');
-document.getElementById('closeVideo').addEventListener('click',()=>{
-modalVideo.pause();
-modalVideo.currentTime=0;
-videoModal.style.display='none';
-});
-
-// Noktalar
-const mapSpots=[
-{x:0.2,y:0.3,src:'video1.mp4'},
-{x:0.5,y:0.5,src:'video2.mp4'},
-{x:0.7,y:0.2,src:'video3.mp4'}
+// Interaktif noktalar (0-1 oranları)
+const mapSpots = [
+    {x:0.2, y:0.3, link:'https://www.youtube.com/embed/dQw4w9WgXcQ'},
+    {x:0.5, y:0.5, link:'https://www.tiktok.com/@solixx144'},
+    {x:0.7, y:0.2, link:'https://www.example.com'}
 ];
 
-miniMap.addEventListener('click',(e)=>{
-const rect=miniMap.getBoundingClientRect();
-const clickX=(e.clientX-rect.left)/rect.width;
-const clickY=(e.clientY-rect.top)/rect.height;
-mapSpots.forEach(spot=>{
-const radius=0.05;
-if(Math.abs(clickX-spot.x)<radius && Math.abs(clickY-spot.y)<radius){
-modalVideo.src=spot.src;
-videoModal.style.display='flex';
-modalVideo.play();
-}
+miniMap.addEventListener('click', (e) => {
+    const rect = miniMap.getBoundingClientRect();
+    const clickX = (e.clientX - rect.left) / rect.width;
+    const clickY = (e.clientY - rect.top) / rect.height;
+
+    let clickedSpot = false;
+    mapSpots.forEach(spot => {
+        const radius = 0.05; // %5 civarı alan
+        if(Math.abs(clickX - spot.x) < radius && Math.abs(clickY - spot.y) < radius){
+            window.open(spot.link, '_blank');
+            clickedSpot = true;
+        }
+    });
+
+    if(!clickedSpot){
+        // Ana reklam linki
+        window.open('https://www.tiktok.com/@solixx144','_blank');
+    }
 });
-});
 
-// Reklam resmine tıklayınca
-miniAdImg.addEventListener('click',()=>window.open('https://www.tiktok.com/@solixx144','_blank'));
+miniAd.addEventListener('click',()=>window.open('https://www.tiktok.com/@solixx144','_blank'));
 
-// Sand Stone başlığı
-document.getElementById('sandStoneTitle').addEventListener('click',()=>miniMap.scrollIntoView({behavior:'smooth',block:'center'}));
+// Sand Stone başlığı tıklanınca fotoğrafın merkezine scroll
+const sandStoneTitle = document.getElementById('sandStoneTitle');
+sandStoneTitle.addEventListener('click',()=>miniMap.scrollIntoView({behavior:'smooth', block:'center'}));
 
-// Ayarlar
-const settingsBtn=document.getElementById('settingsBtn');
-const settingsPopup=document.getElementById('settingsPopup');
-const closeSettings=document.getElementById('closeSettings');
+// Ayarlar paneli
+const settingsBtn = document.getElementById('settingsBtn');
+const settingsPopup = document.getElementById('settingsPopup');
+const closeSettings = document.getElementById('closeSettings');
+const themeLight = document.getElementById('themeLight');
+const themeDark = document.getElementById('themeDark');
+const reportError = document.getElementById('reportError');
+
 settingsBtn.addEventListener('click',()=>settingsPopup.style.display='block');
 closeSettings.addEventListener('click',()=>settingsPopup.style.display='none');
 
-const themeLight=document.getElementById('themeLight');
-const themeDark=document.getElementById('themeDark');
 themeLight.addEventListener('click',()=>{
-document.body.style.backgroundColor='#fff';
-document.body.style.color='#000';
-settingsPopup.style.backgroundColor='#fff';
-settingsPopup.style.color='#000';
+    document.body.style.backgroundColor='#fff';
+    document.body.style.color='#000';
+    settingsPopup.style.backgroundColor='#fff';
+    settingsPopup.style.color='#000';
 });
 themeDark.addEventListener('click',()=>{
-document.body.style.backgroundColor='#222';
-document.body.style.color='#fff';
-settingsPopup.style.backgroundColor='#333';
-settingsPopup.style.color='#fff';
+    document.body.style.backgroundColor='#222';
+    document.body.style.color='#fff';
+    settingsPopup.style.backgroundColor='#333';
+    settingsPopup.style.color='#fff';
 });
 
-// Haritalar tıklaması
-const mapButtons=document.querySelectorAll('.mapBtn');
-const languageSelect=document.getElementById('languageSelect');
-mapButtons.forEach(btn=>{
-btn.addEventListener('click',()=>{
-const lang=languageSelect.value;
-let msg='';
-if(lang==='tr') msg='Yakında Gelecek 🚀';
-else if(lang==='en') msg='Coming Soon 🚀';
-else if(lang==='ru') msg='Скоро будет 🚀';
-alert(msg);
-});
+// Haritalar menüsü (şimdilik Yakında)
+document.querySelectorAll('.mapBtn').forEach(btn=>{
+    btn.addEventListener('click',()=>{ alert('Yakında Gelecek 🚀'); });
 });
 
 // Hata bildir
-document.getElementById('reportError').addEventListener('click',()=>{
-window.open('https://www.tiktok.com/@solixx144','_blank');
-const lang=languageSelect.value;
-let alertMsg='';
-if(lang==='tr') alertMsg="Hata bildirmek için TikTok DM atabilirsiniz!";
-else if(lang==='en') alertMsg="Send a TikTok DM to report an issue!";
-else if(lang==='ru') alertMsg="Отправьте TikTok DM, чтобы сообщить о проблеме!";
-alert(alertMsg);
-});
-
-// Dil değişimi
-const tutorialTitle=document.getElementById('tutorialTitle');
-const tutorialText1=document.getElementById('tutorialText1');
-const tutorialText2=document.getElementById('tutorialText2');
-const settingsTitle=document.getElementById('settingsTitle');
-const themeText=document.getElementById('themeText');
-const langText=document.getElementById('langText');
-const mapsText=document.getElementById('mapsText');
-
-const translations={
-tr:{tutorialTitle:"Nasıl Oynanır?",tutorialText1:"Mini map üstteki fotoğrafa tıklayınca video açılacak.",tutorialText2:"Sol üstten ayarlara girip tema ve dili değiştirebilirsiniz.",settingsTitle:"Ayarlar & Haritalar",themeText:"Tema Seçimi:",langText:"Dil Seçimi:",mapsText:"Haritalar:"},
-en:{tutorialTitle:"How to Play?",tutorialText1:"Click on the mini map image above to open the video.",tutorialText2:"Go to settings at the top-left to change theme and language.",settingsTitle:"Settings & Maps",themeText:"Theme Selection:",langText:"Language:",mapsText:"Maps:"},
-ru:{tutorialTitle:"Как играть?",tutorialText1:"Нажмите на изображение мини-карты выше, чтобы открыть видео.",tutorialText2:"Перейдите в настройки в левом верхнем углу, чтобы изменить тему и язык.",settingsTitle:"Настройки и карты",themeText:"Выбор темы:",langText:"Язык:",mapsText:"Карты:"}
-};
-
-languageSelect.addEventListener('change',()=>{
-const lang=languageSelect.value;
-tutorialTitle.textContent=translations[lang].tutorialTitle;
-tutorialText1.textContent=translations[lang].tutorialText1;
-tutorialText2.textContent=translations[lang].tutorialText2;
-settingsTitle.textContent=translations[lang].settingsTitle;
-themeText.textContent=translations[lang].themeText;
-langText.textContent=translations[lang].langText;
-mapsText.textContent=translations[lang].mapsText;
+reportError.addEventListener('click',()=>{
+    window.open('https://www.tiktok.com/@solixx144','_blank');
+    alert("Hata bildirmek için TikTok DM atabilirsiniz!");
 });
 </script>
 
